--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
             <div class="extension-footer-top">
                 <div class="footer-top-left">
                     <ul>
-                        <li>Terms and Conditions</li>
-                        <li>Privacy policy</li>
-                        <li>Contact Us</li>
+                        <li><a href="./privacy-policy.html">Privacy policy</a> </li>
                     </ul>
                 </div>
                 <div class="footer-top-right">
