adding new chnages

--- a/contact-us.html
+++ b/contact-us.html
@@ -46,52 +46,69 @@
             </div>
             <div class="exten-content-top-right-border">
             </div>
-            <div class="exten-contentfull-content">
-                <div class="exten-con-left">
-                    <h3>Transform Your Browsing Experience with The Secret Place Chrome Extension</h3>
-                    <p>Welcome to the Secret Place - a daily sanctuary for Christian inspiration and reflection. Elevate
-                        your online experience by downloading our exclusive Chrome extension! Immerse yourself in a
-                        daily dose of uplifting Christian quotes and enlightening podcasts right at your fingertips.</p>
-                    <button> <img src="./img/google-chrome-icon1.svg" /> Download the Chrome Extension</button>
-                </div>
-                <div class="exten-con-right">
-                    <img src="./img/Right-side-Image.png" />
-                </div>
-            </div>
-            <div class="extension-footer-new-top">
+            <div class="exten-contentfull-content1">
 
-                <div class="footer-top-left footer-top-new-left">
-                    <div class="exten-content-top-left">
-                        <span class="carewellington-header-text">@carewellington <img
-                                src="./img/checkbox-circle-fill.svg" /> </span>
+
+                <div>
+                    <div class="privacy-link-sec">
+                        <span>
+                            <a href="./index.html">
+                                < </a> </span>
+                        <span>Contact us</span>
                     </div>
-                    <div>
-                        <p>VPP Technologies LLC</p>
-                        <p>40 Norfolk Avenue, Clarendon Hills, IL 60514</p>
-                        <p class="email-temp-footer"><a
-                                href="mailto:contactus@worthathousandwords.com">contactus@worthathousandwords.com</a>
-                        </p>
+                    <div class="contact-us-page-content1">
+                        <div class="contact-us-page-content">
+                            <h3>Contact with Us</h3>
+                            <p>For technical assistance on the extension, reach VPP Technologies.</p>
+                            <div class="contact-us-page-content-add">
+                                <p>VPP Technologies LLC</p>
+                                <p>40 Norfolk Avenue</p>
+                                <p>Clarendon Hills, IL 60514</p>
+                                <p class="email-temp-footer"><a
+                                        href="mailto:contactus@worthathousandwords.com">contactus@worthathousandwords.com</a>
+                                </p>
+                            </div>
+                            <div class="contact-us-page-content-add1">
+                                <p> To contact Carewellington go to <a
+                                        href="mailto:contactus@carewellington.co">contactus@carewellington.co</a> </p>
+                            </div>
+                        </div>
                     </div>
+                </div>
+                <div class="extension-footer-new-top">
 
-                </div>
-                <div class="footer-top-right">
-                    <!-- <ul> -->
-                    <p><a href="./privacy-policy.html">Privacy policy</a> </p>
-                    <p><a href="./contact-us.html">Contact Us</a> </p>
-                    <!-- </ul> -->
-                </div>
-            </div>
-            <div class="extension-footer-top">
-                <div class="footer-top-left">
-                    <span>Carewellington.co extensions are powered by VPP Technologies LLC.</span>
+                    <div class="footer-top-left footer-top-new-left">
+                        <div class="exten-content-top-left">
+                            <span class="carewellington-header-text">@carewellington <img
+                                    src="./img/checkbox-circle-fill.svg" /> </span>
+                        </div>
+                        <div>
+                            <p>VPP Technologies LLC</p>
+                            <p>40 Norfolk Avenue, Clarendon Hills, IL 60514</p>
+                            <p class="email-temp-footer"><a
+                                    href="mailto:contactus@worthathousandwords.com">contactus@worthathousandwords.com</a>
+                            </p>
+                        </div>
 
+                    </div>
+                    <div class="footer-top-right">
+                        <!-- <ul> -->
+                        <p><a href="./privacy-policy.html">Privacy policy</a> </p>
+                        <p><a href="./contact-us.html">Contact Us</a> </p>
+                        <!-- </ul> -->
+                    </div>
                 </div>
-                <div class="footer-top-right">
-                    <span>© 2024 carewellington.co All Rights Reserved</span>
+                <div class="extension-footer-top">
+                    <div class="footer-top-left">
+                        <span>Carewellington.co extensions are powered by VPP Technologies LLC.</span>
+
+                    </div>
+                    <div class="footer-top-right">
+                        <span>© 2024 carewellington.co All Rights Reserved</span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 </body>
 
