--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -220,11 +220,33 @@
                     </div>
                 </div>
             </div>
+            <div class="extension-footer-new-top">
+
+                <div class="footer-top-left footer-top-new-left">
+                    <div class="exten-content-top-left">
+                        <span class="carewellington-header-text">@carewellington <img
+                                src="./img/checkbox-circle-fill.svg" /> </span>
+                    </div>
+                    <div>
+                        <p>VPP Technologies LLC</p>
+                        <p>40 Norfolk Avenue, Clarendon Hills, IL 60514</p>
+                        <p class="email-temp-footer"><a
+                                href="mailto:contactus@worthathousandwords.com">contactus@worthathousandwords.com</a>
+                        </p>
+                    </div>
+
+                </div>
+                <div class="footer-top-right">
+                    <!-- <ul> -->
+                    <p><a href="./privacy-policy.html">Privacy policy</a> </p>
+                    <p><a href="./contact-us.html">Contact Us</a> </p>
+                    <!-- </ul> -->
+                </div>
+            </div>
             <div class="extension-footer-top">
                 <div class="footer-top-left">
-                    <ul>
-                        <li><a href="./privacy-policy.html">Privacy policy</a> </li>
-                    </ul>
+                    <span>Carewellington.co extensions are powered by VPP Technologies LLC.</span>
+
                 </div>
                 <div class="footer-top-right">
                     <span>© 2024 carewellington.co All Rights Reserved</span>
