--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
             </div>
             <div class="exten-contentfull-content">
                 <div class="exten-con-left">
+
                     <h3>Transform Your Browsing Experience with The Secret Place Chrome Extension</h3>
                     <p>Welcome to the Secret Place - a daily sanctuary for Christian inspiration and reflection. Elevate
                         your online experience by downloading our exclusive Chrome extension! Immerse yourself in a
                         daily dose of uplifting Christian quotes and enlightening podcasts right at your fingertips.</p>
-                    <button> <img src="./img/google-chrome-icon1.svg" /> Download the Chrome Extension</button>
+                    <a href="https://chromewebstore.google.com/detail/secret-place/lpfhnfbaibkdbjgeadfbclljdlioobad"
+                        target="_self">
+                        <button> <img src="./img/google-chrome-icon1.svg" /> Download the Chrome Extension</button></a>
                 </div>
                 <div class="exten-con-right">
                     <img src="./img/Right-side-Image.png" />
