adding terms of service

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <div class="footer-top-right">
                     <!-- <ul> -->
                     <p><a href="./privacy-policy.html">Privacy policy</a> </p>
+                    <p><a href="./terms-of-service.html">Terms of Service</a> </p>
                     <p><a href="./contact-us.html">Contact Us</a> </p>
                     <!-- </ul> -->
                 </div>
